--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -13,6 +13,7 @@ $icon-background-color: #f0f0f0;
 
 $border-color: #e0e0e0;
 
-$background-color: #ffffff;
+$background-color: #f1f1f1;
+$surface-color: #ffffff;
 
-$filter-background-color: #f1f1f1;
+$filter-background-color: $background-color;
