--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -13,7 +13,7 @@ $gutter: 6px;
   &__list {
     &::before {
       content: close-quote;
-      background: linear-gradient(to left, transparent, $background-color);
+      background: linear-gradient(to left, transparent, $surface-color);
       width: 126px;
       height: 90%;
       position: absolute;
@@ -27,7 +27,7 @@ $gutter: 6px;
 
     &::after {
       content: close-quote;
-      background: linear-gradient(to right, transparent, $background-color);
+      background: linear-gradient(to right, transparent, $surface-color);
       width: 126px;
       height: 90%;
       position: absolute;
