--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -18,7 +18,7 @@
 
   & .mdc-chip {
     color: $font-secondary-color;
-    background-color: $background-color;
+    background-color: $surface-color;
     border: 1px solid $border-color;
     font-weight: 400;
     font-size: 16px;
