--- a/web/app/assets/stylesheets/components/me-icon-button.scss
+++ b/web/app/assets/stylesheets/components/me-icon-button.scss
@@ -31,7 +31,7 @@ $fill-color: #ffffff;
 
       & .material-icons-sharp {
         font-size: 30px;
-        background: $background-color;
+        background: $surface-color;
       }
     }
   }
