--- a/web/app/assets/stylesheets/components/me-search-field.scss
+++ b/web/app/assets/stylesheets/components/me-search-field.scss
@@ -14,7 +14,7 @@ $border-color: #e0e0e0;
 
   @include mdc-layout-grid-media-query_("phone") {
     border-radius: 3px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   }
 
   &__bot {
@@ -25,7 +25,7 @@ $border-color: #e0e0e0;
     z-index: 2;
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.2s linear;
 
     @include mdc-layout-grid-media-query_("phone") {
       height: 100vh;
@@ -61,9 +61,11 @@ $border-color: #e0e0e0;
     left: 215px;
 
     @include mdc-layout-grid-media-query_("phone") {
+      display: none;
       padding: 12px 8px;
-      color: #ffffff;
-      background-color: $brand-color;
+      color: $font-tertiary-color;
+      background-color: unset;
+      border: unset;
       right: 6px;
       width: 100px;
       left: unset;
@@ -79,26 +81,27 @@ $border-color: #e0e0e0;
     z-index: 2;
     visibility: hidden;
     text-align: center;
-    transition: visibility 0s, opacity 0.5s linear;
+    transition: visibility 0s, opacity 0.2s linear;
     position: absolute;
     opacity: 0;
     right: 6px;
     top: 15px;
+    background: $surface-color;
     cursor: pointer;
-    
+
     @include mdc-layout-grid-media-query_("phone") {
+      background: linear-gradient(to bottom, $surface-color 65%, transparent);
       width: 100vw;
       height: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
       position: fixed;
+      top:0;
     }
 
     & span {
-      border: 1px solid $border-color;
-      border-radius: 2px;
-      padding: 8px 35px;
+      padding: 12px 45px;
       text-transform: uppercase;
       font-size: 0.9em;
       color: $font-secondary-color;
@@ -161,16 +164,19 @@ $border-color: #e0e0e0;
   &--bot-on {
     height: 450px;
     box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-      0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
+    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
     @include mdc-text-field-textarea-fill-color($color: white);
     will-change: unset;
     transition: height 0.2s linear;
-
+    
     @include mdc-layout-grid-media-query_("phone") {
+      box-shadow: unset;
       width: 100vw;
-      height: -webkit-fill-available;
-      height: calc(100vh - 56px);
+      height: 100%;
       border-radius: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
     }
 
     &::before,
