--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 </head>
 
-<body>
+<body ontouchstart="">
   <div class="mdc-drawer-app-content">
 
     <%= render partial: "layouts/app-top-bar" %>
