--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -79,6 +79,10 @@ body {
   
   @include mdc-layout-grid-media-query_("phone") {
     background: $background-color;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
