--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,66 +1,54 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Alegreme - Eventos e atividades em Porto Alegre</title>
-  <meta name="turbolinks-cache-control" content="no-preview">
-  <meta name="theme-color" content="#5ecf80" />
-  <meta name="viewport"
+  <head>
+    <title>Alegreme - Eventos e atividades em Porto Alegre</title>
+    <meta name="turbolinks-cache-control" content="no-preview">
+    <meta name="theme-color" content="#5ecf80" />
+    <meta name="viewport"
     content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <link rel="manifest" href="/manifest.json" />
-
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= stylesheet_link_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/css/embed.css" : ":3030/css/embed.css"), 'data-turbolinks-track': 'reload' %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-</head>
-
-<body ontouchstart="">
-  <div class="mdc-drawer-app-content">
-
-    <%= render partial: "layouts/app-top-bar" %>
-
-    <% if request.parameters['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
-    <section class="me-page__feed-section">
-      <div class="me-overlay"></div>
-      <%= yield %>
-    </section>
-    <% elsif current_page?(controller: 'events', action: 'show') %>
-    <section class="me-page__events-section">
-      <div class="me-overlay"></div>
-      <%= yield %>
-    </section>
-    <% else %>
-      <section class="me-page__feed-section">
-        <div class="me-overlay"></div>
-        <%= yield %>
-      </section>
-    <% end %>
-    
-  </div>
-
-  <% if notice %>
-  <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
-    <div class="mdc-snackbar__surface">
-      <div class="mdc-snackbar__label" role="status" aria-live="polite">
-        <%= notice %>
-      </div>
-      <div class="mdc-snackbar__actions">
-        <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
-      </div>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <link rel="manifest" href="/manifest.json" />
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/css/embed.css" : ":3030/css/embed.css"), 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+  </head>
+  <body>
+    <div class="mdc-drawer-app-content">
+      <%= render partial: "layouts/app-top-bar" %>
+      <% if request.parameters['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
+        <section class="me-page__feed-section">
+          <div class="me-overlay"></div>
+          <%= yield %>
+        </section>
+      <% elsif current_page?(controller: 'events', action: 'show') %>
+        <section class="me-page__events-section">
+          <div class="me-overlay"></div>
+          <%= yield %>
+        </section>
+      <% else %>
+        <section class="me-page__feed-section">
+          <div class="me-overlay"></div>
+          <%= yield %>
+        </section>
+      <% end %>
     </div>
-  </div>
-  <% end %>
+    <% if notice %>
+      <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
+        <div class="mdc-snackbar__surface">
+          <div class="mdc-snackbar__label" role="status" aria-live="polite">
+            <%= notice %>
+          </div>
+          <div class="mdc-snackbar__actions">
+            <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <%= render partial: 'layouts/footer' %>
 
-  <%= render partial: 'layouts/footer' %>
-
-</body>
-
+  </body>
 </html>
