--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -7,15 +7,13 @@
     <meta name="viewport"
     content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
     <link rel="manifest" href="/manifest.json" />
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/css/embed.css" : ":3030/css/embed.css"), 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
-    
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
     <%= Gon::Base.render_data %>
     <%= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
@@ -23,18 +21,20 @@
   </head>
   <body>
     <div class="mdc-drawer-app-content">
-      <%= render partial: "layouts/app-top-bar" %>
       <% if request.parameters['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
+        <%= render partial: "layouts/app-top-bar" %>
         <section class="me-page__feed-section">
           <div class="me-overlay"></div>
           <%= yield %>
         </section>
       <% elsif current_page?(controller: 'events', action: 'show') %>
+        <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
         <section class="me-page__events-section">
           <div class="me-overlay"></div>
           <%= yield %>
         </section>
       <% else %>
+        <%= render partial: "layouts/app-top-bar" %>
         <section class="me-page__feed-section">
           <div class="me-overlay"></div>
           <%= yield %>
@@ -54,6 +54,5 @@
       </div>
     <% end %>
     <%= render partial: 'layouts/footer' %>
-
   </body>
 </html>
