--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -1,4 +1,4 @@
-<header id="top-bar" class="me-top-app-bar mdc-top-app-bar" style="top: 0">
+<header id="top-bar" class="me-top-app-bar mdc-top-app-bar <%= controller == 'events' ? 'me-top-app-bar--events' : '' %>">
   <div class="mdc-top-app-bar__row">
     <section
 			class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
@@ -8,32 +8,45 @@
         </a>
       </span>
     </section>
-    <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
-      <div data-controller="chat" data-target="chat.field" class="me-search-field me-search-field mdc-text-field"
+    <% if mobile_device? && controller == 'events' %>
+      <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
+        <span class="me-top-app-bar__back-button" onclick="window.history.back()">
+          <i class="material-icons">keyboard_backspace</i>
+        </span>
+        <span class="mdc-top-app-bar__title">
+          <a href="/">
+            <%= image_tag "logo.png", class: "me-top-app-bar__logo" %>
+          </a>
+        </span>
+      </section>
+    <% else %>
+      <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
+        <div data-controller="chat" data-target="chat.field" class="me-search-field me-search-field mdc-text-field"
 				id="me-chat" data-turbolinks-permanent>
-        <% unless current_user.try('personas_assortment_finished?') %>
-          <input data-target="chat.input" data-action="click->chat#showBot" id="text-field-shape-one" class="mdc-text-field__input" autocomplete="off" type="text" placeholder="Oi, tem alguem ai?">
-          <div data-target="chat.botConversation" class="me-search-field__bot">
-            <iframe id="botkit_client" referrerpolicy="no-referrer" src="<%= request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/chat.html" : ":3030/chat.html") %>"></iframe>
-          </div>
-          <div data-target="chat.reply" data-action="click->chat#showBot" class="me-search-field__reply">
-            <span>Sim, estou aqui</span>
-          </div>
-          <div data-target="chat.close" data-action="click->chat#hideBot"
-            class="me-search-field__close me-search-field__close--is-hide">
-            <span>Fechar</span>
-          </div>
-        <% else %>
-          <form data-target="chat.form" data-action="submit->chat#search" method="get" name="search" action=""
-            style="width: 100%">
-            <input data-target="chat.input" autocomplete="false" type="text"
+          <% unless current_user.try('personas_assortment_finished?') %>
+            <input data-target="chat.input" data-action="click->chat#showBot" id="text-field-shape-one" class="mdc-text-field__input" autocomplete="off" type="text" placeholder="Oi, tem alguem ai?">
+            <div data-target="chat.botConversation" class="me-search-field__bot">
+              <iframe id="botkit_client" referrerpolicy="no-referrer" src="<%= request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/chat.html" : ":3030/chat.html") %>"></iframe>
+            </div>
+            <div data-target="chat.reply" data-action="click->chat#showBot" class="me-search-field__reply">
+              <span>Sim, estou aqui</span>
+            </div>
+            <div data-target="chat.close" data-action="click->chat#hideBot"
+              class="me-search-field__close me-search-field__close--is-hide">
+              <span>Fechar</span>
+            </div>
+          <% else %>
+            <form data-target="chat.form" data-action="submit->chat#search" method="get" name="search" action=""
+              style="width: 100%">
+              <input data-target="chat.input" autocomplete="false" type="text"
 						placeholder="O que você está buscando hoje?" id="text-field-shape-one"
 						class="mdc-text-field__input">
-            <input type="submit" style="display: none;" />
-          </form>
-        <% end %>
-      </div>
-    </section>
+              <input type="submit" style="display: none;" />
+            </form>
+          <% end %>
+        </div>
+      </section>
+    <% end %>
     <section
 			class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
       <% if current_user %>
