Use bot in application withput iframe

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -15,5 +15,8 @@ $border-color: #e0e0e0;
 
 $background-color: #f1f1f1;
 $surface-color: #ffffff;
+$surface-secondary-color: #f7f7f7;
+
+$elevated-surface-color: #f9f9f9;
 
 $filter-background-color: $background-color;
