--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -15,9 +15,14 @@
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
     <%= Gon::Base.render_data %>
-    <%= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %>
+    <!-- <%= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %> -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js'
+	data-turbolinks-track='reload'></script>
+<script src='https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js' data-turbolinks-track='reload'>
+</script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+    <%= javascript_include_tag 'bot/client', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
     <div class="mdc-drawer-app-content">
@@ -25,6 +30,7 @@
         <%= render partial: "layouts/app-top-bar" %>
         <section class="me-page__feed-section">
           <div class="me-overlay"></div>
+          <%= render partial: 'layouts/bot' %>
           <%= yield %>
         </section>
       <% elsif current_page?(controller: 'events', action: 'show') %>
@@ -36,6 +42,7 @@
       <% else %>
         <%= render partial: "layouts/app-top-bar" %>
         <section class="me-page__feed-section">
+          <%= render partial: 'layouts/bot' %>
           <div class="me-overlay"></div>
           <%= yield %>
         </section>
