--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -46,6 +46,8 @@ line-height: 1.25rem,
 font-weight: 100
 );
 
+@import "bot/embed";
+@import "bot/styles";
 
 @import "@material/typography/mdc-typography";
 @import "@material/card/mdc-card";
@@ -62,10 +64,10 @@ font-weight: 100
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/menu/mdc-menu";
 @import "@material/chips/mdc-chips";
-@import "components/me-components";
 @import "@material/fab/mdc-fab";
 @import "@material/elevation/mdc-elevation";
 @import "@material/snackbar/mdc-snackbar";
+@import "components/me-components";
 
 
 body {
