CReate hero component

--- a/web/app/assets/stylesheets/components/me-bot.scss
+++ b/web/app/assets/stylesheets/components/me-bot.scss
@@ -11,6 +11,7 @@ $border-color: #e0e0e0;
   border-radius: 6px;
   transition: height 0.2s linear;
   background: $elevated-surface-color;
+  margin: 35px 0;
 
   &__start {
     text-align: center;
