--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -2,9 +2,9 @@
   <div class="mdc-top-app-bar__row">
     <section
 			class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-      <span class="mdc-top-app-bar__title">
+      <span class="me-top-app-bar__title">
         <a href="/">
-          <%= image_tag "logo.png", class: "me-top-app-bar__logo" %>
+          <%= image_tag 'logo.svg', class: "me-top-app-bar__logo" %>
         </a>
       </span>
     </section>
@@ -15,7 +15,7 @@
         </span>
         <span class="mdc-top-app-bar__title">
           <a href="/">
-            <%= image_tag "logo.png", class: "me-top-app-bar__logo" %>
+            <%= image_tag 'logo.svg', class: "me-top-app-bar__logo" %>
           </a>
         </span>
       </section>
