--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <div class="mdc-drawer-app-content">
     <% if request.parameters['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
     <%= render partial: "layouts/app-top-bar" %>
-    <%= render partial: 'layouts/hero' %>
+    <%= render partial: 'layouts/hero' unless current_user %>
     <section class="me-page__feed-section">
       <div class="me-overlay"></div>
       <%= render partial: 'layouts/bot' %>
