--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -44,7 +44,7 @@
               <%= event.day_of_week %>
             </div>
             <div class="me-card__title mdc-card__title" data-target="favorite-events.title">
-              <%= limit_name_size event.name, 30 %>
+              <%= limit_name_size event.details_name, 30 %>
             </div>
           </a>
         </div>
