--- a/web/app/views/feeds/train.html.erb
+++ b/web/app/views/feeds/train.html.erb
@@ -58,7 +58,7 @@
                 <%= event.day_of_week %>
               </div>
               <div class="me-card__title mdc-card__title" data-target="favorite.title" style="display: none">
-                <%= event.name %>
+                <%= event.details_name %>
               </div>
             </a>
           </div>
