--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -116,19 +116,20 @@
               </span>
               <span aria-hidden="true"> · </span>
               <span class="me-card__date" data-target="event.date">
-                <%= event.day_of_week %> <%= format_hour event.first_day_time %>
+                <%= event.day_of_week %> <%= format_hour event.first_day_time %> 
+                <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
               </span>
             </div>
             <div class="me-card__secondary-section">
               <div class="me-card__title" data-target="event.name">
                 <a href="<%= event.url %>">
-                  <%= limit_name_size event.name %>
+                  <%= limit_name_size event.details_name %>
                 </a>
               </div>
             </div>
             <div class="me-card__tertiary-section">
               <div class="me-card__place" data-target="event.place">
-                <%= limit_place_name_size event.place_name %>
+                <%= limit_place_name_size event.place_details_name %>
               </div>
             </div>
             <% if current_or_guest_user.admin? %>
