--- a/web/app/views/places/index.html.erb
+++ b/web/app/views/places/index.html.erb
@@ -14,7 +14,7 @@
   <tbody>
     <% @places.each do |place| %>
       <tr>
-        <td><%= place.name %></td>
+        <td><%= place.details_name %></td>
         <td><%= place.address %></td>
         <td><%= link_to 'Show', place %></td>
         <td><%= link_to 'Edit', edit_place_path(place) %></td>
